@@ -1,5 +1,7 @@
 2015-04-02  Giuseppe Scrivano  <gscrivan@redhat.com>
 
+	* src/roach.c (roach_wait): Simplify some code.
+
 	* TODO: TLS won't be useful, as there is only one process running,
 	make it clear.
 
